syntax="proto3";

package student;

option  go_package = "github.com/jose827corrza/gogRPC/studentpb";

message Student {
  string id =1;
  string name = 2;
  int32 age = 3;
    }

message  GetStudentRequest {
  string id = 1;
}

message  SetStudentResponse {
  string id=2;
}

service StudentService {
  rpc GetStudent(GetStudentRequest) returns (Student);
  rpc SetStudent(Student) returns (SetStudentResponse);
}
//este permite tener un generador de protobuffers
//    go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
//    go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest

//despues de lo de arriba podemos ejecutar el compilador de protoB

//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative studentpb/student.proto

//con el comando de arriba se crea el .go con el struct de student